--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "835cfb35",
+   "id": "ca25a15a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88d0761a",
+   "id": "2143d266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "842890b7",
+   "id": "b539e5b0",
    "metadata": {},
    "source": [
     "Postprocessing with atooms\n",
@@ -47,9 +47,9 @@
     "\n",
     "index\n",
     "\n",
-    "In this tutorial, we are going to show how to perform standard analysis\n",
-    "of molecular dynamics trajectories using the `atooms` package and its\n",
-    "`postprocessing` component. You can install `postprocessing` from pypi:\n",
+    "In this tutorial, we\\'ll show how to analyze molecular dynamics\n",
+    "trajectories using the `atooms` package and its `postprocessing`\n",
+    "component. You can install `postprocessing` from pypi:\n",
     "`pip install atooms-pp`.\n",
     "\n",
     "Setup\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a171df7e",
+   "id": "173db95f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f29b8497",
+   "id": "2e496c3a",
    "metadata": {},
    "source": [
     "We consider a sample trajectory, which can be downloaded from the\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c16e8d6e",
+   "id": "322627d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96a17042",
+   "id": "426f0cdc",
    "metadata": {},
    "source": [
     "### Handling a trajectory\n",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6689f4c",
+   "id": "e8c269e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3618aee",
+   "id": "71906e2a",
    "metadata": {},
    "source": [
     "The trajectory is a list-like object, in the sense that it can be\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d7b0162",
+   "id": "3ef619e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c78285d",
+   "id": "27fe87e9",
    "metadata": {},
    "source": [
     "To know how many frames we have\n"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96a01b4e",
+   "id": "586bc5ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff303265",
+   "id": "4657baff",
    "metadata": {},
    "source": [
     "To clarify: a slice like `th[10: 12]` is a list of frames, not a\n",
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33399c36",
+   "id": "57cd4028",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,51 +180,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af889ad0",
+   "id": "6abc12cd",
    "metadata": {},
    "source": [
     "Analysis of the trajectory\n",
     "--------------------------\n",
     "\n",
     "Now that we have constructed a trajectory object, we can proceed to the\n",
-    "analysis. We are going to consider two main aspects of the analysis:\n",
+    "analysis. We will consider a few basic static and dynamic correlation\n",
+    "functions.\n",
     "\n",
-    "-   structural correlations\n",
-    "-   dynamical correlations\n",
+    "### Radial distribution function\n",
     "\n",
-    "### Structural correlations\n",
+    "The radial distribution function $g(r)$ describes how the local density\n",
+    "varies as a function of the distance from a reference particle. In\n",
+    "liquids, one normally averages over all particles, obtaining a\n",
+    "descriptor of the probability to find a second particle a distance $r$\n",
+    "from a given particle, relative to that of the ideal gas.\n",
     "\n",
-    "1.  Radial distribution function\n",
+    "For $N$ particles of the same type at density $\\rho$ it is\n",
     "\n",
-    "    The radial distribution function $g(r)$ describes how the local\n",
-    "    density varies as a function of the distance from a reference\n",
-    "    particle. In liquids, one normally averages over all particles,\n",
-    "    obtaining a descriptor of the probability to find a second particle\n",
-    "    a distance $r$ from a given particle, relative to that of the ideal\n",
-    "    gas.\n",
+    "$$g(r)=\\frac{1}{N\\rho}\\left\\langle\\sum_i^{N}\\sum_{i\\neq j}\\delta(r-|\\mathbf{r}_i-\\mathbf{r}_j|)\\right\\rangle$$.\n",
     "\n",
-    "    For $N$ particles of the same type at density $\\rho$ it is\n",
+    "Notice that the average number of particles with a distance $R$, i.e.\n",
+    "the average **coordination number** $n(R)$, can be computed from the\n",
+    "radial distribution function via integration in spherical coordinates\n",
+    "(for 3D systems)\n",
     "\n",
-    "    $$g(r)=\\frac{1}{N\\rho}\\left\\langle\\sum_i^{N}\\sum_{i\\neq j}\\delta(r-|\\mathbf{r}_i-\\mathbf{r}_j|)\\right\\rangle$$.\n",
+    "$$n(R)=4\\pi \\rho\\int_0^R g(r)r^2 dr$$\n",
     "\n",
-    "    Notice that the average number of particles with a distance $R$,\n",
-    "    i.e. the average **coordination number** $n(R)$, can be computed\n",
-    "    from the radial distribution function via integration in spherical\n",
-    "    coordinates (for 3D systems)\n",
-    "\n",
-    "    $$n(R)=4\\pi \\rho\\int_0^R g(r)r^2 dr$$\n",
-    "\n",
-    "    In `postprocessing` the radial distribution function is a\n",
-    "    `Correlation` object that takes a trajectory as input. In order to\n",
-    "    compute the correlation function, we construct the object,\n",
-    "    specifying some parameters, and then run the calculation with the\n",
-    "    `compute()` method.\n"
+    "In `postprocessing` the radial distribution function is a `Correlation`\n",
+    "object that takes a trajectory as input. In order to compute the\n",
+    "correlation function, we construct the object, specifying some\n",
+    "parameters, and then run the calculation with the `compute()` method.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "207974ed",
+   "id": "a5f2f369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d6c7b4",
+   "id": "657faa32",
    "metadata": {},
    "source": [
     "Once the calculation is performed, the radial distribution object `gr`\n",
@@ -257,19 +251,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76156d7e",
+   "id": "ad08bd95",
    "metadata": {},
    "outputs": [],
    "source": [
     "pl.plot(gr.grid, gr.value, label='Default')\n",
     "pl.plot(gr_all.grid, gr_all.value, label='All time origins')\n",
-    "pl.xlabel(\"r\")\n",
-    "pl.ylabel(\"g(r)\")"
+    "pl.xlabel(\"$r$\")\n",
+    "pl.ylabel(\"$g(r)$\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7f74c3d8",
+   "id": "91c27f2f",
    "metadata": {},
    "source": [
     "![](gr.png)\n",
@@ -282,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5be872a4",
+   "id": "523e67a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b277011",
+   "id": "74692fb6",
    "metadata": {},
    "source": [
     "As we can see, the correlation function displays two narrow peaks around\n",
@@ -308,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82f5bebb",
+   "id": "e72ab1b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,11 +313,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3571cc25",
+   "id": "9c72170a",
    "metadata": {},
    "source": [
-    "Note how we modified the bin width `dr` for the $B$-$B$ correlations to\n",
-    "compensate for the reduced statistics for the minority species.\n",
+    "Note how we modified the bin width `dr` for the $B$ - $B$ correlations\n",
+    "to compensate for the reduced statistics for the minority species.\n",
     "\n",
     "In this case, the result contains a dictionary `gr.partial`\n"
    ]
@@ -331,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb37ee83",
+   "id": "b77716e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e7aa8b1",
+   "id": "449bc06c",
    "metadata": {},
    "source": [
     "We plot all correlation functions\n"
@@ -350,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9998f61",
+   "id": "219d4873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "141c2b16",
+   "id": "45b7453c",
    "metadata": {},
    "source": [
     "![](gr_ab.png)\n",
@@ -376,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fee29abc",
+   "id": "fdfdec7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,52 +379,50 @@
     "gr = pp.RadialDistributionFunction(t, dr=0.03)\n",
     "gr.compute()\n",
     "pl.plot(gr.grid, gr.value)\n",
-    "pl.xlabel(\"r\")\n",
-    "pl.ylabel(\"g(r)\")"
+    "pl.xlabel(\"$r$\")\n",
+    "pl.ylabel(\"$g(r)$\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e21ec7e6",
+   "id": "fa8d69f0",
    "metadata": {},
    "source": [
     "![](gr_slice.png)\n",
     "\n",
-    "### Dynamical correlations\n",
+    "### Mean square displacement\n",
     "\n",
-    "1.  Mean square displacement\n",
+    "We can also compute dynamical correlation functions. The simplest of\n",
+    "such quantities is the mean squared displacement (MSD). This is defined\n",
+    "as\n",
     "\n",
-    "    We can also compute dynamical correlation functions. The simplest of\n",
-    "    such quantities is the mean squared displacement (MSD). This is\n",
-    "    defined as\n",
+    "$$ \\delta r^2(t)= \\langle |\\mathbf{r}(t-t_0) - \\mathbf{r}(t_0)|^2\\rangle$$\n",
     "\n",
-    "    $$ \\delta r^2(t)= \\langle |\\mathbf{r}(t-t_0) - \\mathbf{r}(t_0)|^2\\rangle$$\n",
+    "The average is usually performed over all the $N$ particles and over\n",
+    "multiple time origins $t_0$.\n",
     "\n",
-    "    The average is usually performed over all the $N$ particles and over\n",
-    "    multiple time origins $t_0$.\n",
-    "\n",
-    "    The analysis process is now familiar. First we construct the msd\n",
-    "    object and then perform the calculation with `compute()`. By\n",
-    "    default, the time grid is linear.\n"
+    "The analysis process is now familiar. First we construct the msd object\n",
+    "and then perform the calculation with `compute()`. By default, the time\n",
+    "grid is linear.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bebb7566",
+   "id": "d9cf2f27",
    "metadata": {},
    "outputs": [],
    "source": [
     "msd = pp.MeanSquareDisplacement(th)\n",
     "msd.compute()\n",
     "pl.plot(msd.grid, msd.value, '-o')\n",
-    "pl.xlabel(\"t\")\n",
-    "pl.ylabel(\"MSD(t)\");"
+    "pl.xlabel(\"$t$\")\n",
+    "pl.ylabel(\"MSD\");"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "981badd6",
+   "id": "bd92e6a0",
    "metadata": {},
    "source": [
     "![](msd.png)\n",
@@ -445,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6bd06c",
+   "id": "47b10b6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,18 +448,18 @@
     "pl.loglog(msds.partial['A'].grid, msds.partial['A'].value, '-o', label='A')\n",
     "pl.loglog(msds.partial['B'].grid, msds.partial['B'].value, '-o', label='B')\n",
     "pl.legend()\n",
-    "pl.xlabel(\"t\")\n",
-    "pl.ylabel(\"MSD(t)\")"
+    "pl.xlabel(\"$t$\")\n",
+    "pl.ylabel(\"MSD\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e0a0c106",
+   "id": "ab74c640",
    "metadata": {},
    "source": [
     "![](msd_ab.png)\n",
     "\n",
-    "Self intermediate scattering function\n",
+    "### Self intermediate scattering function\n",
     "\n",
     "We compute the self part of the intermediate scattering function (ISF)\n",
     "at specific wave-vectors using a logarithmic time grid. We specify the\n",
@@ -482,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb3d0c33",
+   "id": "305ea3c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,11 +488,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24107b0b",
+   "id": "b664934c",
    "metadata": {},
    "source": [
     "Note that now `grid` is a tuple of lists: the first one is the list of\n",
-    "all the $k$\\'s (the $k$-number grid) while the second is the list of\n",
+    "all the $k$\\'s (the $k$ number grid) while the second is the list of\n",
     "$t$\\'s (the time grid, which is identical for all wave-vectors).\n",
     "\n",
     "The ISF decays to zero at long times, as it should in an ergodic liquid.\n"
@@ -509,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "056cc4ed",
+   "id": "7e12e25c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,13 +509,13 @@
     "pl.semilogx(isf_A.grid[1], isf_A.value[0], '-o', label=f'k={isf_A.grid[0][0]:.2f}') \n",
     "pl.semilogx(isf_A.grid[1], isf_A.value[1], '-o', label=f'k={isf_A.grid[0][1]:.2f}') \n",
     "pl.legend()\n",
-    "pl.xlabel('t')\n",
+    "pl.xlabel('$t$')\n",
     "pl.ylabel('ISF')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "077c49d6",
+   "id": "65532755",
    "metadata": {},
    "source": [
     "![](isf.png)\n",
@@ -537,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99c94f2c",
+   "id": "8b19ac17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd70dfe6",
+   "id": "c821c8e8",
    "metadata": {},
    "source": [
     "-   \\`BondAngleDistribution\\`: bond angle distribution\n",
@@ -600,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd3bb69a",
+   "id": "fb2f56e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3a5f3b2",
+   "id": "afae6d9c",
    "metadata": {},
    "source": [
     "### Dynamic correlations\n",
@@ -650,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29ad4786",
+   "id": "ec3e6ec2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e3f5a47",
+   "id": "faa3ee7f",
    "metadata": {},
    "source": [
     "Storing results and analysis\n",
@@ -706,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1709d975",
+   "id": "c201546f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2622d414",
+   "id": "7b741ff2",
    "metadata": {},
    "source": [
     "The output file path is interpolated using the variable\n",
@@ -727,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "638659fb",
+   "id": "ddb76347",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3ad0bc7",
+   "id": "ff099bd1",
    "metadata": {},
    "source": [
     "To change the output file pattern just modify the string. You can use\n",
@@ -752,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00cec52c",
+   "id": "e8a24057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ab0660a",
+   "id": "0adad4fa",
    "metadata": {},
    "source": [
     "If `analyze()` is called before `compute()`, the above dictionary will\n",
@@ -775,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd7ee188",
+   "id": "53da320c",
    "metadata": {},
    "outputs": [],
    "source": [
